--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <div class="author">
-    <h1 class="author__heading">Hi, I am Raddy.</h1>
-    <p class="author__body">Web developer and content creator.</p>
+    <h1 class="author__heading">Hi, I am Sami.</h1>
+    <p class="author__body">Web developer.</p>
   </div>
   
   <img src="/img/hero-image.webp" alt="person looking out through window" class="hero-image" width="981" height="528">
